some spacing issue fix

--- a/src/features/news/news.css
+++ b/src/features/news/news.css
@@ -59,3 +59,9 @@
 .news_card a:hover{
     color: #df590b ;
 }
+
+@media only screen and (max-width: 768px){
+    .secondary_col{
+        margin-top: 20px
+    }
+}
